[gd_scene load_steps=4 format=3 uid="uid://bmt4100w0s7tp"]

[ext_resource type="Script" path="res://resources/entity/enemy/worm/PoisonPuddle.gd" id="1_tlq0y"]
[ext_resource type="Texture2D" uid="uid://d0hxwytuvpcds" path="res://asset/visual/icon.svg" id="2_8yaie"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16xre"]
size = Vector2(18, 18)

[node name="PoisonPuddle" type="Area2D"]
collision_layer = 0
collision_mask = 14
input_pickable = false
monitorable = false
script = ExtResource("1_tlq0y")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_8yaie")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_16xre")

[node name="LifeTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="TriggerTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]
[connection signal="timeout" from="TriggerTimer" to="." method="_on_trigger_timer_timeout"]
